[Chore] More analytics, API functionality, and dashboard tweaks (#48)
* Added crop calculations and metrics

* Reworked farmer reports

* Added crop and farmer report metrics

* Fixed bugs in crop and farmer report layouts

* Implemented crop estimation metrics

* Added API endpoints

* Fixed submit farmer report endpoint

* Fixed linting

* Added main screen and anikultura config

* Refactored list screens to use config var

* Updated .env.example

* Adjusted hectares size seeding in farmland
