# storage/api-docs/api-docs.json
@@ -117,51 +117,144 @@
                 }
             }
         },
+        "/crops/seed-allocation": {
+            "get": {
+                "tags": [
+                    "crops"
+                ],
+                "description": "Get the allocated seeds of the logged in farmer",
+                "operationId": "3d90f9f54f922e560c378c9ec1c6f3dc",
+                "responses": {
+                    "200": {
+                        "description": "The allocated seeds",
+                        "content": {
+                            "application/json": {
+                                "schema": {}
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthenticated",
+                        "content": {
+                            "application/json": {
+                                "schema": {}
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/crops": {
+            "get": {
+                "tags": [
+                    "crops"
+                ],
+                "description": "Get the current crops of the logged in farmer",
+                "operationId": "5ade082c33866cc5b85198dbfba03be3",
+                "responses": {
+                    "200": {
+                        "description": "The current crops",
+                        "content": {
+                            "application/json": {
+                                "schema": {}
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthenticated",
+                        "content": {
+                            "application/json": {
+                                "schema": {}
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/crops/seed-stage": {
+            "get": {
+                "tags": [
+                    "crops"
+                ],
+                "description": "Get the current seed stage of the logged in farmer",
+                "operationId": "5d9d034aaae36115f095c9ef66f2635a",
+                "responses": {
+                    "200": {
+                        "description": "The current seed stage",
+                        "content": {
+                            "application/json": {
+                                "schema": {}
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthenticated",
+                        "content": {
+                            "application/json": {
+                                "schema": {}
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/farmer-reports": {
+            "get": {
+                "tags": [
+                    "farmer-reports"
+                ],
+                "description": "Get the submitted farmer reports of the logged in farmer",
+                "operationId": "09bc52a7232e2b94c0cccdca674db51c",
+                "responses": {
+                    "200": {
+                        "description": "The submitted farmer reports",
+                        "content": {
+                            "application/json": {
+                                "schema": {}
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthenticated",
+                        "content": {
+                            "application/json": {
+                                "schema": {}
+                            }
+                        }
+                    }
+                }
+            },
             "post": {
                 "tags": [
-                    "farmer_reports"
+                    "farmer-reports"
                 ],
-                "description": "Create farmer reports",
-                "operationId": "52e31995f8366c15208e900e175f884d",
+                "description": "Submit a farming report with logged in farmer",
+                "operationId": "b0b0cbb75920a20eb8c8ddb2d78cc62d",
                 "requestBody": {
-                    "description": "Pass farmer reports",
                     "required": true,
                     "content": {
                         "application/json": {
                             "schema": {
-                                "required": [
-                                    "farmer_id",
-                                    "farmland_id",
-                                    "seed_stage_id",
-                                    "crop_id",
-                                    "volume"
-                                ],
                                 "properties": {
-                                    "farmer_id": {
-                                        "type": "bigint",
-                                        "format": "bigint",
-                                        "example": "5000"
-                                    },
-                                    "farmland_id": {
-                                        "type": "bigint",
-                                        "format": "bigint",
-                                        "example": "4000"
-                                    },
-                                    "seed_stage_id": {
-                                        "type": "bigint",
-                                        "format": "bigint",
-                                        "example": "3000"
-                                    },
-                                    "crop_id": {
-                                        "type": "bigint",
-                                        "format": "bigint",
-                                        "example": "2000"
-                                    },
-                                    "volume": {
-                                        "type": "double",
-                                        "format": "double",
-                                        "example": "1000"
+                                    "farmer_report": {
+                                        "properties": {
+                                            "farmland_id": {
+                                                "type": "integer",
+                                                "format": "int",
+                                                "example": "1"
+                                            },
+                                            "crop_id": {
+                                                "type": "integer",
+                                                "format": "int",
+                                                "example": "1"
+                                            },
+                                            "volume_kg": {
+                                                "type": "number",
+                                                "format": "double",
+                                                "example": "10.23"
+                                            }
+                                        },
+                                        "type": "object"
                                     }
                                 },
                                 "type": "object"
@@ -171,7 +264,7 @@
                 },
                 "responses": {
                     "200": {
-                        "description": "Successfuly crated a farmer report",
+                        "description": "The created farmer report",
                         "content": {
                             "application/json": {
                                 "schema": {}
@@ -185,17 +278,28 @@
                                 "schema": {}
                             }
                         }
-                    },
-                    "401": {
-                        "description": "Invalid request",
+                    }
+                }
+            }
+        },
+        "/farmlands": {
+            "get": {
+                "tags": [
+                    "farmlands"
+                ],
+                "description": "Get the associated farmlands of the logged in farmer",
+                "operationId": "c56c3666d86d9dd2bed885aff96beab6",
+                "responses": {
+                    "200": {
+                        "description": "The associated farmlands",
                         "content": {
                             "application/json": {
                                 "schema": {}
                             }
                         }
                     },
-                    "400": {
-                        "description": "Bad request. Id must be bigint.",
+                    "401": {
+                        "description": "Unauthenticated",
                         "content": {
                             "application/json": {
                                 "schema": {}
@@ -209,7 +313,19 @@
     "tags": [
         {
             "name": "auth",
-            "description": "Authentication endpoints"
+            "description": "Endpoints related with authentication such as login and logout."
+        },
+        {
+            "name": "crops",
+            "description": "Endpoints related with crops such as retrieving current seed stage and allocated seeds."
+        },
+        {
+            "name": "farmlands",
+            "description": "Endpoints related with farmlands such as what farmland a farmer belongs in."
+        },
+        {
+            "name": "farmer-reports",
+            "description": "Endpoints related with farmer reports such as submitting and retrieving their history."
         }
     ],
     "security": [
